--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,51 @@
 
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Chính sách quyền riêng tư - FAVI</title>
+<style>
+body { font-family: system-ui, sans-serif; line-height: 1.5; padding: 20px; }
+h1,h2 { font-size: 1.3em; }
+.card { border:1px solid #e5e7eb; border-radius:12px; padding:16px; box-shadow:0 1px 3px rgba(0,0,0,0.07); margin-top:12px;}
+</style>
+</head>
+<body>
+<h1>Chính sách quyền riêng tư</h1>
+<p>Ứng dụng FAVI là ứng dụng tham khảo kiến thức bệnh vật nuôi. Ứng dụng không thu thập dữ liệu cá nhân nhạy cảm.</p>
+
+<div class="card">
+<h2>1. Dữ liệu thu thập</h2>
+<p>Chúng tôi sử dụng <strong>Firebase Analytics</strong> để ghi nhận dữ liệu ẩn danh về hành vi sử dụng ứng dụng, gồm:</p>
+<p>Thời gian dùng app, tương tác chọn loài bệnh, cuộn trang, và thông tin crash/hiệu năng thiết bị.</p>
+<p>Dữ liệu này hoàn toàn ẩn danh và không định danh cá nhân.</p>
+</div>
+
+<div class="card">
+<h2>2. Dữ liệu không thu thập</h2>
+<p>Ứng dụng <strong>không</strong> thu:</p>
+<p>Tên thật, địa chỉ nhà, tọa độ GPS cụ thể, dữ liệu y tế con người, CCCD/ID chính phủ, thông tin thanh toán cá nhân.</p>
+</div>
+
+<div class="card">
+<h2>3. Mục đích sử dụng</h2>
+<p>Dữ liệu ẩn danh dùng để:</p>
+<p>Cải thiện trải nghiệm, tối ưu hiệu năng, và nâng chất lượng tính năng tìm bệnh theo triệu chứng.</p>
+</div>
+
+<div class="card">
+<h2>4. Liên hệ</h2>
+<p>Email hỗ trợ/ sở hữu hiện tại của ứng dụng: :contentReference[oaicite:1]{index=1} (khi cần chúng tôi có thể trả lời qua hộp thư này).</p>
+<p>Ứng dụng và dữ liệu chỉ mang tính tham khảo, không thay thế bác sĩ thú y.</p>
+</div>
+
+<div class="card">
+<h2>5. Lưu trữ và chia sẻ</h2>
+<p>Chính sách lưu trữ tuân thủ tiêu chuẩn phân loại nội dung và quy tắc của <strong>Google Play</strong>. Không chia sẻ dữ liệu cá nhân bắt buộc nào.</p>
+<p>Telemetry lưu nội bộ để tối ưu sản phẩm và gửi lên Firebase theo chuẩn ẩn danh.</p>
+</div>
+
+<p class="card"><em>Hiệu lực: từ ngày đăng chính sách này.</em></p>
+</body>
+</html>
